Cleaned up a lot, removed unnessesary XSLTs, removed unnessesary rest methods and simplified the xslt transformations
